# root-io

./: .coveragerc  .gitignore  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README.rst  pyproject.toml  run.py  setup.py  test.py
rootio/: CustomStreamers.py  DirectStreamers.py  Histogram.py  IOData.py  ROOT.py  ROOTJS.py  StreamerDict.py  TBuffer.py  TDirectory.py  TFile.py  UnZip.py  __init__.py  make_json_serializable.py
rootio/ttree/: TDrawSelector.py  TDrawVariable.py  TSelector.py  TTree.py
tests/: __init__.py  read_file_object.py
