[metadata]
name = 'root-io'
version = '0.0.1'
description = ''
author = 'jdbrice'
author_email = 'jdb12@rice.edu'
license = 'MIT/Apache-2.0'
url = 'https://github.com/jdbrice/root-io'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
